--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,6 +1,7 @@
 $color-bg-home: #3772FF;
 $color-bg-btn: #FC7071;
 $color-bg-btn-hover: #e75656;
+$color-bg-custom: #F7F7F7;
 $color-bg-footer: #36D6AD;
 
 $color-bg-abstr: #36D6AD;
@@ -8,5 +9,7 @@ $color-bg-input: #F6F6F6;
 
 $color-txt: #fff;
 $color-txt-1: #3772FF;
+$color-txt-2: #FC7071;
 $color-title-input: #737380;
 $color-txt-input: #BCBCBC;
+
