--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -6,11 +6,13 @@ body {
     position: relative;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    z-index: -1;
 }
 
 .color-bg-button {
     background-color: variables.$color-bg-btn;
-    transition: background-color .3s;
+    z-index: 1000;
+    transition: all .7s;
     border: 1px solid variables.$color-bg-btn;
 
     &:hover {
@@ -23,12 +25,138 @@ body {
     color: variables.$color-txt;
 }
 
+.color-txt-1 {
+    color: variables.$color-txt-1;
+}
+
+.color-txt-2 {
+    color: variables.$color-txt-2;
+}
+
+.pet-color-bg-custom {
+    z-index: -1;
+    background-color: variables.$color-bg-custom;
+}
+
 .pet-link {
     color: variables.$color-txt;
     text-decoration: none;
 
     &:hover {
-        color:  variables.$color-txt;
+        color: variables.$color-txt;
         text-decoration: underline;
+    }
+}
+
+
+// Template Ilustração
+@media (min-width: 360px) {
+    .pet-template {
+
+        &__ilustracao {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            height: calc(100vh - 60px);
+
+            &::before {
+                content: '';
+                position: absolute;
+                width: 95%;
+                height: 50%;
+                background-color: transparent;
+                background-image: url('/src/assets/imgs/forma-1.svg');
+                background-size: contain;
+                background-repeat: no-repeat;
+                pointer-events: none;
+                z-index: -1;
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0px;
+                top: 40%;
+                width: 100%;
+                height: 55%;
+                background-color: transparent;
+                background-image: url('/src/assets/imgs/forma-2.svg');
+                background-size: contain;
+                transform: scaleX(-1);
+                background-repeat: no-repeat;
+                background-position: right;
+                pointer-events: none;
+                z-index: -1;
+            }
+        }
+
+        &__figure {
+            position: absolute;
+            width: 100%;
+
+            &::after {
+                content: '';
+                position: absolute;
+                height: 30%;
+                width: 100%;
+                top: 0;
+                right: 0;
+                background-image: url('../imgs/tres-patas.svg');
+                background-repeat: no-repeat;
+                background-size: contain;
+                background-position: right;
+                pointer-events: none;
+                z-index: 10;
+            }
+        }
+    }
+}
+
+@media (min-width: 572px) {
+    .pet-template {
+
+        &__ilustracao {
+
+            &::after {
+                content: '';
+                position: absolute;
+                right: 0px;
+                top: 30%;
+                width: 100%;
+                height: 60%;
+                background-color: transparent;
+                background-image: url('/src/assets/imgs/forma-2.svg');
+                background-size: contain;
+                transform: scaleX(1);
+                background-repeat: no-repeat;
+                background-position: right;
+                pointer-events: none;
+                z-index: -1;
+            }
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .pet-template {
+
+        &__ilustracao {
+            &::before {
+                width: 100%;
+                height: 50%;
+            }
+
+            &::after {
+                top: 22%;
+                width: 100%;
+                height: 65%;
+            }
+        }
+
+        &__figure {
+            &::after {
+                height: 45%;
+            }
+        }
     }
 }
