svg baixados e cards dos pets para desktops

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -12,4 +12,4 @@ $color-txt-1: #3772FF;
 $color-txt-2: #FC7071;
 $color-title-input: #737380;
 $color-txt-input: #BCBCBC;
-
+$color-txt-body: #737380;
