--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 body {
   position: relative;
@@ -364,10 +365,44 @@ body {
   margin-right: 174px;
 }
 
-.tes {
+.pet-gallery__title {
+  font-size: 1.125rem;
+}
+.pet-gallery__pet-image {
+  display: block;
+  object-fit: contain;
+  margin-left: auto;
+}
+.pet-gallery__description {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  color: #737380;
+}
+.pet-gallery__regional {
+  font-size: 0.75rem;
+  color: #737380;
+  line-height: 1;
+}
+.pet-gallery__link {
+  display: flex;
+  align-items: center;
+  font-size: 0.625rem;
+  line-height: 25px;
+  text-decoration: none;
+  color: #737380;
+}
+.pet-gallery__link:hover {
+  text-decoration: underline;
+  color: #737380;
+}
+.pet-gallery__link::before {
+  content: "";
   position: relative;
-  padding-top: 160px;
-  background-color: blueviolet;
+  margin-right: 0.325rem;
+  height: 18px;
+  width: 18px;
+  background-image: url("/src/assets/imgs/ícone-mensagem.svg");
+  background-repeat: no-repeat;
 }
 
 /*# sourceMappingURL=styles.css.map */
