paginas contato, galeria
criada a página de contato, lista de pets para adoção

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -8,3 +8,5 @@
 @use 'pages-styles/cadastro/cadastro.scss';
 @use 'pages-styles/login/login.scss';
 @use 'pages-styles/galeria/galeria.scss';
+@use 'pages-styles/contato/contato.scss';
+@use 'pages-styles/perfil/perfil.scss';
