--- a/src/assets/sass/pages-styles/header.scss
+++ b/src/assets/sass/pages-styles/header.scss
@@ -8,6 +8,15 @@
         width: auto;
     }
 
+    &__user {
+        height: 40px;
+        width: 40px;
+        overflow: hidden;
+        border-radius: 20px;
+        object-fit: cover;
+        object-position: center;
+    }
+
     &__link {
         width: auto;
     }
