--- a/src/assets/sass/pages-styles/header.scss
+++ b/src/assets/sass/pages-styles/header.scss
@@ -12,7 +12,7 @@
         height: 40px;
         width: 40px;
         overflow: hidden;
-        border-radius: 20px;
+        border-radius: 50%;
         object-fit: cover;
         object-position: center;
     }
