--- a/src/assets/sass/pages-styles/perfil/perfil.scss
+++ b/src/assets/sass/pages-styles/perfil/perfil.scss
@@ -1,1 +1,142 @@
 @use '../../variables';
+
+
+@media (min-width: 360px) {
+    .pet-profile {
+        height: 100%;
+
+        &__section {
+            height: 100%;
+            z-index: 50;
+
+            &::after {
+                content: '';
+                position: absolute;
+                display: block;
+                height: 100%;
+                top: 0;
+                width: 100%;
+                background-image: url('/src/assets/imgs/forma-1.svg');
+                background-repeat: no-repeat;
+                background-size: contain;
+            }
+        }
+
+        .pet-container {
+            padding-top: 200px;
+            margin-bottom: 2rem;
+        }
+
+        &__title {
+            font-size: 1rem;
+        }
+
+        &__subtitle {
+            font-size: 1.3125rem;
+            color: variables.$color-title-input;
+        }
+
+        &__group {
+            position: relative;
+            width: 80px;
+            height: 80px;
+            overflow: hidden;
+            border-radius: 50%;
+            cursor: pointer;
+            z-index: 100;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.20);
+
+            &:hover::before {
+                content: 'X';
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+                width: 100%;
+                font-size: 1.5rem;
+                color: variables.$color-txt;
+                overflow: hidden;
+                border: none;
+                position: absolute;
+                background-color: rgba(0, 0, 0, 0.25);
+                background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.275) 10%, rgba(124, 124, 124, 0.20) 100%);
+                z-index: 1;
+            }
+        }
+
+        &__img {
+            display: block;
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            position: relative;
+            object-position: center;
+        }
+
+        #input-nome-foto {
+            display: none;
+            visibility: hidden;
+        }
+
+        &__message {
+            padding-top: .5rem;
+            font-size: .75rem;
+            line-height: 20px;
+            color: variables.$color-txt-2;
+        }
+
+    }
+}
+
+@media (min-width: 572px) {
+    .pet-profile {
+        &__section {
+            &::after {
+                width: 80%;
+            }
+        }
+
+        .pet-container {
+            padding-top: 230px;
+            margin-bottom: 2rem;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .pet-profile {
+        height: 100%;
+
+        &__section {
+            &::after {
+                width: 65%;
+                max-width: 600px;
+            }
+        }
+
+        .pet-container {
+            padding-top: 230px;
+        }
+
+        &__title {
+            font-size: 1.125rem;
+        }
+
+    }
+}
+
+@media (min-width: 992px) {
+    #profile-img {
+        height: 64px;
+        width: 65px;
+        border-radius: 50%;
+    }
+}
+
+@media (min-width: 1400px) {
+    .pet-profile {
+        .pet-container {
+            padding-top: 180px;
+        }
+    }
+}
