--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -179,7 +179,7 @@ body {
   height: 40px;
   width: 40px;
   overflow: hidden;
-  border-radius: 20px;
+  border-radius: 50%;
   object-fit: cover;
   object-position: center;
 }
@@ -518,6 +518,117 @@ body {
   }
   .pet-contact__section {
     padding-top: 3rem;
+  }
+}
+@media (min-width: 360px) {
+  .pet-profile {
+    height: 100%;
+  }
+  .pet-profile__section {
+    height: 100%;
+    z-index: 50;
+  }
+  .pet-profile__section::after {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    top: 0;
+    width: 100%;
+    background-image: url("/src/assets/imgs/forma-1.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  .pet-profile .pet-container {
+    padding-top: 200px;
+    margin-bottom: 2rem;
+  }
+  .pet-profile__title {
+    font-size: 1rem;
+  }
+  .pet-profile__subtitle {
+    font-size: 1.3125rem;
+    color: #737380;
+  }
+  .pet-profile__group {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 100;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  .pet-profile__group:hover::before {
+    content: "X";
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    font-size: 1.5rem;
+    color: #fff;
+    overflow: hidden;
+    border: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.25);
+    background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.275) 10%, rgba(124, 124, 124, 0.2) 100%);
+    z-index: 1;
+  }
+  .pet-profile__img {
+    display: block;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+    object-position: center;
+  }
+  .pet-profile #input-nome-foto {
+    display: none;
+    visibility: hidden;
+  }
+  .pet-profile__message {
+    padding-top: 0.5rem;
+    font-size: 0.75rem;
+    line-height: 20px;
+    color: #FC7071;
+  }
+}
+@media (min-width: 572px) {
+  .pet-profile__section::after {
+    width: 80%;
+  }
+  .pet-profile .pet-container {
+    padding-top: 230px;
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 768px) {
+  .pet-profile {
+    height: 100%;
+  }
+  .pet-profile__section::after {
+    width: 65%;
+    max-width: 600px;
+  }
+  .pet-profile .pet-container {
+    padding-top: 230px;
+  }
+  .pet-profile__title {
+    font-size: 1.125rem;
+  }
+}
+@media (min-width: 992px) {
+  #profile-img {
+    height: 64px;
+    width: 65px;
+    border-radius: 50%;
+  }
+}
+@media (min-width: 1400px) {
+  .pet-profile .pet-container {
+    padding-top: 180px;
   }
 }
 
