--- a/src/assets/style/styles.css
+++ b/src/assets/style/styles.css
@@ -56,14 +56,15 @@ body {
   color: #FC7071;
 }
 
-.erro-container.erro-mensagem {
+.erro-container > .erro-mensagem {
   display: block;
 }
 
-#conferirSenhas {
+#conferirSenhas, #mensagem {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 9999;
 }
 
 .senhasDiferentes {
@@ -85,7 +86,7 @@ body {
     position: relative;
     width: 100%;
     overflow: hidden;
-    height: calc(100vh - 60px);
+    height: calc(100% - 60px);
   }
   .pet-template__ilustracao::before {
     content: "";
@@ -386,6 +387,7 @@ body {
     font-size: 1rem;
   }
   .pet-login__forgot-link {
+    display: block;
     font-size: 0.75rem;
     text-decoration: none;
   }
