--- a/src/assets/sass/pages-styles/login/login.scss
+++ b/src/assets/sass/pages-styles/login/login.scss
@@ -8,6 +8,7 @@
         }
 
         &__forgot-link {
+            display: block;
             font-size: 0.75rem;
             text-decoration: none;
 
